--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,20 @@ services:
 
   ### MySQL ################################################
   mysql:
+    platform: linux/x86_64
     build:
       context: ./build/docker/mysql
       args:
         - MYSQL_VERSION=5.7
     environment:
-      - MYSQL_DATABASE=laravel_db
-      - MYSQL_USER=laravel
-      - MYSQL_PASSWORD=secret
+      - MYSQL_DATABASE=goblog
+      - MYSQL_USER=goblog
+      - MYSQL_PASSWORD=123456
       - MYSQL_ROOT_PASSWORD=123456
       - TZ=Asia/Shanghai
     volumes:
-      - ./docker/docker-runtime/mysql:/var/lib/mysql
-      - ./docker/mysql/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
+      - ./build/docker/docker-runtime/mysql:/var/lib/mysql
+      - ./build/docker/mysql/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     ports:
       - "33060:3306"
     logging:
